Première version (Inscription/Connexion) + modification BD

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,8 +17,8 @@
         <div class="container">
             <a href="#" class="brand-logo">Site du Stage</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="home/index.html.twig">Home</a></li>
+                <li><a href="security/login.html.twig">Login</a></li>
             </ul>
         </div>
     </div>
