Deuxième version (Enregistrement de documents/ Lecteur de documents)

--- a/templates/base_connected.html.twig
+++ b/templates/base_connected.html.twig
@@ -18,9 +18,9 @@
         <div class="container">
             <a href="#" class="brand-logo">Site du Stage</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{ path('homepage') }}">Home</a></li>
-                <li><a href="{{ path('app_register') }}">Register</a></li>
-                <li><a href="{{ path('app_login') }}">Login</a></li>
+                <li><a href="{{ path('homepage_connected') }}">Home</a></li>
+                <li><a href="{{ path('add') }}">Add a file</a></li>
+                <li><a href="{{ path('app_logout') }}">Logout</a></li>
             </ul>
         </div>
     </div>
