--- a/templates/home/add.html.twig
+++ b/templates/home/add.html.twig
@@ -1,5 +1,5 @@
 {# templates/home/add.html.twig #}
-{% extends "base.html.twig" %}
+{% extends "base_connected.html.twig" %}
 {% block content %}
 
     <h1>Ajouter un document</h1>
