--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -1,5 +1,5 @@
 {# templates/home/index.html.twig #}
-{% extends "base.html.twig" %}
+{% extends "base_connected.html.twig" %}
 
 {% block title %}PDF | {{ parent() }}{% endblock %}
 
