Troisième version (Filtres)

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {# templates/registration/register.html.twig #}
 
-{% extends 'base.html.twig' %}
+{% extends 'base_connected.html.twig' %}
 
 {% block title %}Inscription{% endblock %}
 
