--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,20 +9,31 @@
 
     {% block stylesheets %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/app.css') }}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css"/>
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     {% endblock %}
 </head>
 <body>
-<nav>
-    <div class="nav-wrapper">
-        <div class="container">
-            <a href="#" class="brand-logo">Site du Stage</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{ path('homepage') }}">Home</a></li>
-                <li><a href="{{ path('app_register') }}">Register</a></li>
-                <li><a href="{{ path('app_login') }}">Login</a></li>
-            </ul>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                <img
+                        src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Logoupjv-bleu.png"
+                        class="me-2"
+                        height="20"
+                        alt=""
+                        loading="lazy"
+                />
+                <small>EPROAD LabDocCenter</small>
+            </a>
         </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="{{ path('homepage') }}">Home</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="{{ path('app_login') }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
     </div>
 </nav>
 
@@ -33,6 +44,8 @@
 {% block scripts %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 {% endblock %}
 </body>
 </html>
