Quatrième version (Admin)

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,4 +1,8 @@
-nav {
-    background-color: #d4b672;
-    margin-bottom: 30px;
+.masthead {
+    height: 100vh;
+    min-height: 500px;
+    background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
