--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -30,7 +30,8 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="{{ path('homepage_connected') }}">Home</a></li>
             <li><a href="{{ path('document_add') }}">Add a file</a></li>
-            <li><a href="{{ path('document_add') }}">Reset password</a></li>
+            <li><a href="{{ path('app_register') }}">Add an user</a></li>
+            <li><a href="{{ path('app_stats') }}">Stats</a></li>
             <li><a href="{{ path('app_logout') }}">Logout</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
