--- a/templates/home/index_c.html.twig
+++ b/templates/home/index_c.html.twig
@@ -28,8 +28,8 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{{ path('show_pdf', {"name" : document.docName}) }}" style="text-decoration: none; color: white;">Download</a></button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{{ path('filtre') }}" style="text-decoration: none; color: white;">Delete</a></button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{{ path('show_pdf', {"name" : document.docName}) }}" style="text-decoration: none; color: black;">Download</a></button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{{ path('filtre') }}" style="text-decoration: none; color: black;">Delete</a></button>
                         </div>
                     </div>
                 </div>
