--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,6 +26,10 @@
                 <input type="password" name="password" id="inputPassword" class="form-control" required placeholder="Mot de passe">
             </div>
 
+            <div class="col s12 m6 l6 offset-m3 offset-l3">
+                <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié</a>
+            </div>
+
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
             {#
